# clawstrider

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
clawstrider/: __init__.py  agent.py  schema.py  swarm.py  tool.py
clawstrider/utils/: logging.py  validation.py
examples/: multi_agent_support.py
tests/: test_swarm.py
