[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawstrider"
version = "0.1.0"
authors = [
  { name="Clawstrider Maintainers", email="ops@example.com" },
]
description = "Dynamic conductor for synchronizing complex AI agent swarms"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openclaw>=0.1.5",
    "pydantic>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/example/clawstrider"
